# securebank-backend

./: Dockerfile  main.py  pyproject.toml  requirements.txt
api/: index.py
