[project]
name = "securebank-backend"
version = "1.0.0"
description = "Real-time webhook server for SecureBank CES Agent Studio"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "google-cloud-documentai>=2.30.0",
    "google-cloud-storage>=2.18.0",
    "twilio>=9.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.12",
    "google-cloud-secret-manager>=2.21.0",
]
